infra/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: default
spec:
  gatewayClassName: eg
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.mandacode.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: mandacode-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-console-exact
      protocol: HTTPS
      port: 443
      hostname: "console.mandacode.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: mandacode-tls-console
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-console
      protocol: HTTPS
      port: 443
      hostname: "*.console.mandacode.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: mandacode-tls-console
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-oidc-starship
      protocol: HTTPS
      port: 443
      hostname: "oidc.starship.mandacode.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-oidc-starship
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-serengeti
      protocol: HTTPS
      port: 443
      hostname: "*.serengeti.sh"
      tls:
        mode: Terminate
        certificateRefs:
          - name: serengeti-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: ssh
      protocol: TCP
      port: 22
      allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: TCPRoute
