infra/envoy-gateway/test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-test
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: gateway-test
  labels:
    app: test
spec:
  containers:
    - name: test-container
      image: nginx:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: gateway-test
spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: HTTPRoute
metadata:
  name: test-route
  namespace: gateway-test
spec:
  hostnames:
    - "test.mandacode.com"
  parentRefs:
    - name: eg
      namespace: default
      sectionName: "https"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: test-service
          namespace: gateway-test
          port: 80
